--- a/src/styles/heightWidth.scss
+++ b/src/styles/heightWidth.scss
@@ -1,23 +1,28 @@
-$minHeightWidth : 0 !default;
-$maxHeightWidth : 150 !default;
-$heightWidthList : 160,170,180,190,200,250,300,350,400,450,500,550,600,700,800,900 !default;
+$minHeightWidth: 0 !default;
+$maxHeightWidth: 150 !default;
+$heightWidthList: 160, 170, 180, 190, 200, 250, 300, 350, 400, 450, 500, 550, 600, 700, 800, 900, 1000, 1200 !default;
 
 .w-100p {
   width: 100%;
 }
+
 .w-100p-imp {
   width: 100% !important;
 }
+
 .h-100p {
   height: 100%;
 }
+
 .min-h-100p {
   min-height: 100%;
 }
+
 .w-h-100p {
   width: 100%;
   height: 100%;
 }
+
 @for $num from $minHeightWidth through $maxHeightWidth {
   .w-#{$num} {
     width: #{$num}px;
@@ -38,7 +43,8 @@ $heightWidthList : 160,170,180,190,200,250,300,350,400,450,500,550,600,700,800,9
     max-height: #{$num}px;
   }
 }
-@each $num in $heightWidthList{
+
+@each $num in $heightWidthList {
   .w-#{$num} {
     width: #{$num}px;
   }
