--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "@/styles/base.scss";
 @import "@/styles/heightWidth.scss";
 @import "@/styles/fontSize.scss";
+@import "@/styles/border.scss";
 @import "@/styles/marginPadding.scss";
